[package]
name = "combine-jpeg"
version = "0.1.0"
authors = ["Markus Westerlind <marwes91@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.4"
combine = { version = "4.0.0-alpha.1", path = "../combine" }
derive_more = "0.15"
itertools = "0.8"
log = "0.4"

[dev-dependencies]
criterion = { version = "0.2", default-features = false }
env_logger = "0.6"
image = "0.21"
mozjpeg = { version = "0.8", features = ["with_simd", "nasm_simd"] }

[[bench]]
name = "basic"
harness = false

[profile.bench]
debug = true
lto = true
codegen-units = 1

[profile.release]
debug = true
lto = true
codegen-units = 1
panic = "abort"
