[package]
name = "combine-jpeg"
version = "0.1.0"
authors = ["Markus Westerlind <marwes91@gmail.com>"]
description = "JPEG decoder implementation"
readme = "README.md"
license = "MIT / Apache-2.0"
edition = "2018"

[dependencies]
arrayvec = "0.4"
combine = "4.0.0"
derive_more = "0.15"
itertools = "0.8"
log = "0.4"
rayon = { version = "1", optional = true }

bytes = "0.5"
tokio-util = { version = "0.2", features = ["codec"] }

[dev-dependencies]
criterion = { version = "0.3", default-features = false }
env_logger = "0.6"
image = { version = "0.21", default-features = false, features = ["png_codec"] }
partial-io = { version = "0.3", features = ["quickcheck", "tokio"] }
quickcheck = "0.6"
quickcheck_macros = "0.8"
futures = "0.3"
tokio = "0.2"

mozjpeg = { version = "0.8", features = ["with_simd", "nasm_simd"] }
jpeg-decoder = { version = "0.1", default-features = false } # Disable multithreaded decoding since no other decoder uses it

[[bench]]
name = "basic"
harness = false

[profile.bench]
debug = true
lto = true
codegen-units = 1

[profile.release]
debug = true
lto = true
codegen-units = 1
panic = "abort"
