[package]
name = "combine-jpeg"
version = "0.1.0"
authors = ["Markus Westerlind <marwes91@gmail.com>"]
description = "JPEG decoder implementation"
readme = "README.md"
license = "MIT / Apache-2.0"
edition = "2018"

[dependencies]
arrayvec = "0.7"
combine = "4.6"
derive_more = "0.99"
itertools = "0.10"
log = "0.4"
rayon = { version = "1", optional = true }

bytes = "1"
tokio-util = { version = "0.6", features = ["codec"] }

[dev-dependencies]
criterion = { version = "0.3", default-features = false }
env_logger = "0.9"
image = { version = "0.23", default-features = false, features = ["png"] }
partial-io = { version = "0.3", features = ["quickcheck", "tokio"] }
quickcheck = "1"
quickcheck_macros = "1"
futures = "0.3"
tokio = "1"

mozjpeg = { version = "0.9", features = ["with_simd", "nasm_simd"] }
jpeg-decoder = { version = "0.1", default-features = false } # Disable multithreaded decoding since no other decoder uses it

[[bench]]
name = "basic"
harness = false

[profile.bench]
debug = true
lto = true
codegen-units = 1

[profile.release]
debug = true
lto = true
codegen-units = 1
panic = "abort"
